deployment/gke/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic-rest
  labels:
    app.kubernetes.io/name: spring-petclinic-rest
    app.kubernetes.io/instance: spring-petclinic-rest-gke
