deployment/gke/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-rest-deployment
  namespace: spring-petclinic-rest
  labels:
    app.kubernetes.io/name: spring-petclinic-rest
    app.kubernetes.io/instance: spring-petclinic-rest-gke
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: spring-petclinic-rest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-petclinic-rest
    spec:
      automountServiceAccountToken: false
      containers:
        - name: api
          image: docker.io/springcommunity/spring-petclinic-rest:3.2.1
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 9966
