deployment/gke/manifests/database.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-ss
  namespace: spring-petclinic-rest
  labels:
    app.kubernetes.io/name: spring-petclinic-rest
    app.kubernetes.io/instance: spring-petclinic-rest-gke
    app.kubernetes.io/component: database
    app.kubernetes.io/version: "16.2-alpine"
    app.kubernetes.io/part-of: spring-petclinic-rest
    app: database
    environment: production
spec:
  selector:
    matchLabels:
      app: database
  serviceName: database
  template:
    metadata:
      labels:
        app: database
    spec:
      automountServiceAccountToken: false
      containers:
        - name: docker.io/library/postgres:16.2-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-data
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
              ephemeral-storage: 512Mi
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: database-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: spring-petclinic-rest
  labels:
    app.kubernetes.io/name: spring-petclinic-rest
    app.kubernetes.io/instance: spring-petclinic-rest-gke
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: spring-petclinic-rest
    app: database
    environment: production
spec:
  ports:
    - port: 5432
  selector:
    app: database
