deployment/gke/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-rest-service
  namespace: spring-petclinic-rest
  labels:
    app.kubernetes.io/name: spring-petclinic-rest
    app.kubernetes.io/instance: spring-petclinic-rest-gke
spec:
  selector:
    app.kubernetes.io/name: spring-petclinic-rest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9966
  type: LoadBalancer
