deployment/gke/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic-rest-ingress
  labels:
    app.kubernetes.io/name: spring-petclinic-rest
    app.kubernetes.io/instance: spring-petclinic-rest-gke
spec:
  ingressClassName: nginx
  rules:
    - host: advprogkki.backtruck.art
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: spring-petclinic-rest-service
                port:
                  number: 80
